--- a/css/etalab-mediawiki.css
+++ b/css/etalab-mediawiki.css
@@ -5957,77 +5957,136 @@ td.visible-print {
   background-color: #5584b5;
 }
 @font-face {
-  font-family: 'icomoon';
-  src: url('../fonts/icomoon.eot');
-  src: url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'), url('../fonts/icomoon.woff') format('woff'), url('../fonts/icomoon.ttf') format('truetype'), url('../fonts/icomoon.svg#icomoon') format('svg');
+  font-family: "etalab-icons";
+  src: url("../fonts/etalab-icons.eot");
+  src: url("../fonts/etalab-icons.eot?#iefix") format("embedded-opentype"), url("../fonts/etalab-icons.woff") format("woff"), url("../fonts/etalab-icons.ttf") format("truetype"), url("../fonts/etalab-icons.svg?#etalab-icons") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 .icon {
-  /* Use the following CSS code if you want to have a class per icon */
-
-}
-.icon[class^="icon-"]:before,
-.icon[class*=" icon-"]:before {
-  speak: none;
-  font-family: 'icomoon';
-  font-style: normal;
+  font-family: "etalab-icons";
+  display: inline-block;
   font-weight: normal;
-  -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
+  font-style: normal;
+  speak: none;
+  text-decoration: inherit;
+  text-transform: none;
   text-rendering: optimizeLegibility;
-  font-size: 1.1em;
-  width: 1em;
-  font-size: 1em;
-  margin: 2px;
-  line-height: 1;
+  -webkit-font-smoothing: antialiased;
 }
-.icon.icon-culture:before {
-  content: "\e006";
-  font-size: 1.2em;
+.icon-bug:before {
+  content: "\f100";
 }
-.icon.icon-wind:before {
-  content: "\e005";
-  font-size: 1.3em;
-  top: 14px;
+.icon-case:before {
+  content: "\f101";
 }
-.icon.icon-education:before {
-  content: "\e004";
-  top: 14px;
+.icon-chart:before {
+  content: "\f102";
 }
-.icon.icon-france:before {
-  content: "\e00c";
+.icon-culture:before {
+  content: "\f103";
 }
-.icon.icon-europe:before {
-  content: "\e01c";
-  font-size: 1.3em;
-  top: 14px;
+.icon-education:before {
+  content: "\f104";
 }
-.icon.icon-justice:before {
-  content: "\e002";
-  font-size: 1em;
-  top: 15px;
+.icon-euro:before {
+  content: "\f105";
 }
-.icon.icon-world:before {
-  content: "\e003";
+.icon-europe:before {
+  content: "\f106";
 }
-.icon.icon-hearth:before {
-  content: "\e001";
-  font-size: 1em;
+.icon-france:before {
+  content: "\f107";
 }
-.icon.icon-shield:before {
-  content: "\e008";
-  font-size: .9em;
-  top: 17px;
+.icon-heart:before {
+  content: "\f108";
 }
-.icon.icon-people:before {
-  content: "\e000";
-  font-size: 1em;
+.icon-justice:before {
+  content: "\f109";
 }
-.icon.icon-case:before {
-  content: "\e00d";
-  font-size: 1.1em;
-  top: 14px;
+.icon-light-bulb:before {
+  content: "\f10a";
+}
+.icon-location:before {
+  content: "\f10b";
+}
+.icon-people:before {
+  content: "\f10c";
+}
+.icon-rss:before {
+  content: "\f10d";
+}
+.icon-shield:before {
+  content: "\f10e";
+}
+.icon-smiley:before {
+  content: "\f10f";
+}
+.icon-target:before {
+  content: "\f110";
+}
+.icon-wind:before {
+  content: "\f111";
+}
+.icon-world:before {
+  content: "\f112";
+}
+.icon_bug:before {
+  content: "\f100";
+}
+.icon_case:before {
+  content: "\f101";
+}
+.icon_chart:before {
+  content: "\f102";
+}
+.icon_culture:before {
+  content: "\f103";
+}
+.icon_education:before {
+  content: "\f104";
+}
+.icon_euro:before {
+  content: "\f105";
+}
+.icon_europe:before {
+  content: "\f106";
+}
+.icon_france:before {
+  content: "\f107";
+}
+.icon_heart:before {
+  content: "\f108";
+}
+.icon_justice:before {
+  content: "\f109";
+}
+.icon_light-bulb:before {
+  content: "\f10a";
+}
+.icon_location:before {
+  content: "\f10b";
+}
+.icon_people:before {
+  content: "\f10c";
+}
+.icon_rss:before {
+  content: "\f10d";
+}
+.icon_shield:before {
+  content: "\f10e";
+}
+.icon_smiley:before {
+  content: "\f10f";
+}
+.icon_target:before {
+  content: "\f110";
+}
+.icon_wind:before {
+  content: "\f111";
+}
+.icon_world:before {
+  content: "\f112";
 }
 .full-container {
   padding-left: 15px;
@@ -6137,6 +6196,48 @@ a.thumbnail-link:hover .thumbnail {
   border-top-color: white;
   border-bottom-color: white;
 }
+.navbar-default {
+  margin-bottom: 0;
+}
+.navbar-subnav {
+  background-color: #446588;
+  z-index: 800;
+}
+.navbar-subnav input[type="search"] {
+  color: white;
+  background-color: #223346;
+  border-radius: 0;
+  border: 1px solid transparent;
+}
+.navbar-subnav .glyphicon {
+  color: white;
+}
+.navbar-subnav .territory-clear {
+  color: red;
+  cursor: pointer;
+}
+.navbar-subnav .navbar-form {
+  border: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+.navbar-subnav .input-group .input-group-addon {
+  background-color: #223346;
+  border: 1px solid #223346;
+}
+.navbar-subnav .input-group .input-group-btn .btn {
+  background-color: #223346;
+  border: 1px solid #223346;
+}
+.navbar-subnav .input-group .form-control.tt-query,
+.navbar-subnav .input-group .tt-hint {
+  border-radius: 0 4px 4px 0;
+}
+@media (max-width: 768px) {
+  .navbar-subnav .input-group {
+    margin: 5px;
+  }
+}
 .input-group.collapse {
   display: none;
 }
@@ -6149,6 +6250,49 @@ a.thumbnail-link:hover .thumbnail {
     font-size: 22px;
     font-weight: bold;
   }
+}
+.twitter-typeahead {
+  width: 100%;
+}
+.twitter-typeahead .tt-hint {
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+}
+.twitter-typeahead .tt-dropdown-menu {
+  color: white;
+  font-weight: bold;
+  width: 100%;
+  background-color: #334c66;
+  margin-top: -1px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  *border-right-width: 2px;
+  *border-bottom-width: 2px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box;
+}
+.twitter-typeahead .tt-suggestion {
+  font-weight: normal;
+  display: block;
+  padding: 3px 20px;
+}
+.twitter-typeahead .tt-suggestion.tt-is-under-cursor {
+  background-color: #416b96;
+  background-image: -webkit-gradient(linear, left 0%, left 100%, from(#416b96), to(#2267af));
+  background-image: -webkit-linear-gradient(top, #416b96, 0%, #2267af, 100%);
+  background-image: -moz-linear-gradient(top, #416b96 0%, #2267af 100%);
+  background-image: linear-gradient(to bottom, #416b96 0%, #2267af 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff416b96', endColorstr='#ff2267af', GradientType=0);
+}
+.twitter-typeahead .tt-suggestion p {
+  margin: 0;
 }
 /**
  * Sidebar style and fixes
@@ -6203,74 +6347,6 @@ a.thumbnail-link:hover .thumbnail {
 #sidebar .panel-body ul.list-unstyled li:focus {
   padding-left: 15px;
   background-color: #446588;
-}
-#sidebar form {
-  margin: -1px;
-  display: block;
-}
-#sidebar input[type="search"] {
-  color: white;
-  background-color: #223346;
-  border-radius: 0;
-  border: 1px solid transparent;
-}
-#sidebar .input-group-addon,
-#sidebar .input-group-btn .btn {
-  border-radius: 0;
-}
-#sidebar #where-group {
-  width: 100%;
-}
-#sidebar #where-group .input-group-addon {
-  background-color: #223346;
-  border: 1px solid #223346;
-}
-#sidebar #where-group .twitter-typeahead {
-  width: 100%;
-}
-#sidebar #where-group .twitter-typeahead .tt-hint {
-  width: 100%;
-  height: 34px;
-  padding: 6px 12px;
-}
-#sidebar #where-group .twitter-typeahead .tt-dropdown-menu {
-  width: 100%;
-  background-color: #334c66;
-  margin-top: -1px;
-  padding: 5px 0;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  *border-right-width: 2px;
-  *border-bottom-width: 2px;
-  border-radius: 6px;
-  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  -webkit-background-clip: padding-box;
-  -moz-background-clip: padding;
-  background-clip: padding-box;
-}
-#sidebar #where-group .twitter-typeahead .tt-suggestion {
-  display: block;
-  padding: 3px 20px;
-}
-#sidebar #where-group .twitter-typeahead .tt-suggestion.tt-is-under-cursor {
-  background-color: #416b96;
-  background-image: -webkit-gradient(linear, left 0%, left 100%, from(#416b96), to(#2267af));
-  background-image: -webkit-linear-gradient(top, #416b96, 0%, #2267af, 100%);
-  background-image: -moz-linear-gradient(top, #416b96 0%, #2267af 100%);
-  background-image: linear-gradient(to bottom, #416b96 0%, #2267af 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff416b96', endColorstr='#ff2267af', GradientType=0);
-}
-#sidebar #where-group .twitter-typeahead .tt-suggestion p {
-  margin: 0;
-}
-#sidebar .glyphicon {
-  color: white;
-}
-#sidebar .territory-clear {
-  color: red;
-  cursor: pointer;
 }
 #sidebar .list-group-item {
   color: white;
