--- a/css/etalab-mediawiki.css
+++ b/css/etalab-mediawiki.css
@@ -7348,3 +7348,14 @@ section.footer {
 .mw-body h2 .btn-group {
   margin-top: 7px;
 }
+.mw-body h3 {
+  margin-top: 35px;
+  margin-bottom: 7px;
+  padding-bottom: 5px;
+}
+.mw-body h3 .btn-group {
+  margin-top: 5px;
+}
+.mw-body p {
+  line-height: 1.5em;
+}
