--- a/less/etalab-mediawiki.less
+++ b/less/etalab-mediawiki.less
@@ -102,4 +102,18 @@ section.footer {
     h2 .btn-group {
         margin-top: 7px;
     }
+
+    h3 {
+        margin-top: 35px;
+        margin-bottom: 7px;
+        padding-bottom: 5px;
+
+        .btn-group {
+            margin-top: 5px;
+        }
+    }
+
+    p {
+        line-height: 1.5em;
+    }
 }
