--- a/less/etalab-mediawiki.less
+++ b/less/etalab-mediawiki.less
@@ -14,6 +14,11 @@
     }
 }
 
+.topmenu .user button.tofix {
+    line-height: 30px;
+    padding-left: 10px;
+}
+
 #toc, .toc {
     // .well();
     .card();
